adding cornac.php, to unify all. Plus partial support of sqlite (wont pass all tests, but will work pretty fine)

--- a/ini/tokenizeur.ini
+++ b/ini/tokenizeur.ini
@@ -1,6 +1,13 @@
+[mysql]
+dsn="mysql:dbname=analyseur;host=127.0.0.1"
+username=root
+password=
+active=false
+[sqlite]
+dsn=sqlite:/tmp/tokenizeur.sq3
+active=true
 [template.mysql]
-host=127.0.0.1
-user=root
-mdp=
 dbname=analyseur
+table=tokens
+[template.sqlite]
 table=tokens
