--- a/dict/translations.fr.ini
+++ b/dict/translations.fr.ini
@@ -3,6 +3,21 @@
 title = "New"
 ;original_description = "Liste des utilisations de l'opérateur"
 description = "Liste des utilisations de l'opérateur"
+[_this]
+;original_title = "Utilisation indue de $this"
+title = "Utilisation indue de $this"
+;original_description = "Recherche les utilisations de $this hors d'une classe."
+description = "Recherche les utilisations de $this hors d'une classe."
+[addElement]
+;original_title = "addElement utilisés"
+title = "addElement utilisés"
+;original_description = "Recherche les utilisations de la méthode addElement"
+description = "Recherche les utilisations de la méthode addElement"
+[addElement_unaffected]
+;original_title = "addElement non affectés "
+title = "addElement non affectés "
+;original_description = "Recherche les utilisations de la méthode addElement qui ne sont pas affectés à une variable"
+description = "Recherche les utilisations de la méthode addElement qui ne sont pas affectés à une variable"
 [affectations_direct_gpc]
 ;original_title = "Assignation GPC"
 title = "Assignation GPC"
@@ -93,11 +108,21 @@ description = "Liste des constantes utilisées"
 title = "Constantes de classe"
 ;original_description = "Liste des constantes de classes définies"
 description = "Liste des constantes de classes définies"
+[constantes_link]
+;original_title = "Liens entre fichier par constante"
+title = "Liens entre fichier par constante"
+;original_description = "Fichiers qui utilisent une même constante"
+description = "Fichiers qui utilisent une même constante"
 [dangerous_combinaisons]
 ;original_title = "Combinaisons dangereuses"
 title = "Combinaisons dangereuses"
 ;original_description = "Liste de fichiers ayant des combinaisons dangereuses d'elements (ex. $_POST et shell_exec)."
 description = "Liste de fichiers ayant des combinaisons dangereuses d'elements (ex. $_POST et shell_exec)."
+[defarray]
+;original_title = "Listes en tableaux "
+title = "Listes en tableaux "
+;original_description = "Liste les tableaux qui contiennent des listes de valeurs"
+description = "Liste les tableaux qui contiennent des listes de valeurs"
 [defconstantes]
 ;original_title = "Constantes"
 title = "Constantes"
@@ -173,6 +198,16 @@ description = "Liste des fonctions de fichier native utilisées dans l'applicati
 title = "Fonctions de filter"
 ;original_description = "Liste des fonctions de l'extension de filter de PHP"
 description = "Liste des fonctions de l'extension de filter de PHP"
+[foreach_unused]
+;original_title = "Variables non utilisées d'un foreach"
+title = "Variables non utilisées d'un foreach"
+;original_description = "Repère les variables d'un foreach qui ne sont pas utilisées. foreach($a as $k => $v) {     }"
+description = "Repère les variables d'un foreach qui ne sont pas utilisées. foreach($a as $k => $v) {     }"
+[function_link]
+;original_title = "Lien entre les fichiers via les fonctions"
+title = "Lien entre les fichiers via les fonctions"
+;original_description = "Établit les liens entre deux fichiers, pour via une fonction : un lien est établit entre le fichier de défintion de la fonction, et son utilisation"
+description = "Établit les liens entre deux fichiers, pour via une fonction : un lien est établit entre le fichier de défintion de la fonction, et son utilisation"
 [functions_frequency]
 ;original_title = "Fréquence des fonctions"
 title = "Fréquence des fonctions"
@@ -308,6 +343,11 @@ description = "Liste des fonctions mssql"
 title = "Fichiers muli-déclarations"
 ;original_description = "Fichier définissant plusieurs structures"
 description = "Fichier définissant plusieurs structures"
+[multidimarray]
+;original_title = "Tableaux multi-dimensionnels"
+title = "Tableaux multi-dimensionnels"
+;original_description = "Liste les tableaux utilisées de manière multi-dimensionnelles, que ce soit par appel ($x[1][2]) ou par construction (array(array())"
+description = "Liste les tableaux utilisées de manière multi-dimensionnelles, que ce soit par appel ($x[1][2]) ou par construction (array(array())"
 [mvc]
 ;original_title = "Types de fichiers MVC"
 title = "Types de fichiers MVC"
@@ -363,6 +403,11 @@ description = "Liste des différentes fonctions PHP utilisées dans l'applicatio
 title = "Extensions PHP nécessaires"
 ;original_description = "Liste des modules PHP utilisés"
 description = "Liste des modules PHP utilisés"
+[popular_libraries]
+;original_title = "Bibliothèques courantes"
+title = "Bibliothèques courantes"
+;original_description = "Identifie les structures de différentes bibliothèques courantes."
+description = "Identifie les structures de différentes bibliothèques courantes."
 [properties_defined]
 ;original_title = "Propriétés définies"
 title = "Propriétés définies"
@@ -378,6 +423,11 @@ description = "Propriétés utilisées par une classe"
 title = "Propriétés publiques"
 ;original_description = "Liste des propriétés publiques"
 description = "Liste des propriétés publiques"
+[references]
+;original_title = "References"
+title = "References"
+;original_description = "Liste des références faites"
+description = "Liste des références faites"
 [regex]
 ;original_title = "Regex"
 title = "Regex"
@@ -513,6 +563,11 @@ description = "Liste des fonctions de XML"
 title = "Actions Zend"
 ;original_description = "Liste des fonctions méthodes de contrôleur pour le ZF (*Action)"
 description = "Liste des fonctions méthodes de contrôleur pour le ZF (*Action)"
+[zfClasses]
+;original_title = "Classes du Zend Framework"
+title = "Classes du Zend Framework"
+;original_description = "Repère les classes issues du Zend Framework"
+description = "Repère les classes issues du Zend Framework"
 [zfController]
 ;original_title = "Controleurs ZF"
 title = "Controleurs ZF"
