adding 2 new descriptions

--- a/dict/translations.en.ini
+++ b/dict/translations.en.ini
@@ -303,6 +303,16 @@ description = "Liste des niveaux d'indentation nécessaires : les classes, fonct
 title = "Interfaces"
 ;original_description = "Liste des noms d'interfaces définies"
 description = "Liste des noms d'interfaces définies"
+[keyval]
+;original_title = "Variables de foreach"
+title = "Variables de foreach"
+;original_description = "Liste des variables utilisées comme cle ou valeur dans un foreach"
+description = "Liste des variables utilisées comme cle ou valeur dans un foreach"
+[keyval_outside]
+;original_title = "Clé/valeurs hors de la boucle"
+title = "Clé/valeurs hors de la boucle"
+;original_description = "Identifie les clé/valeur qui sont hors de la boucle de leur initialisation."
+description = "Identifie les clé/valeur qui sont hors de la boucle de leur initialisation."
 [ldap_functions]
 ;original_title = "Fonctions LDAP"
 title = "Fonctions LDAP"
