added new tasks

--- a/ini/cornac.ini
+++ b/ini/cornac.ini
@@ -1,15 +1,15 @@
 [cornac]
 ini = "cornac"
 prefix = "cornac"
-origin = "path/to/source"
-destination = "path/to/export"
+origin = "./References/cornac/"
+destination = "/Users/alterway/Desktop/cornac/"
 storage = "mysql"
 [mysql]
 dsn = "mysql:dbname=analyseur;host=127.0.0.1"
 username = "root"
 password = ""
 active = 1
-[sqlite] ; Don't use this one, not tested 
+[sqlite]
 dsn = "sqlite:/tmp/cornac.sq3"
 active = 0
 [template.mysql]
@@ -19,15 +19,14 @@ dependences = 1
 analyzers = "all"
 [reader]
 dependences = ""
-module = "inclusions2"
+module = ""
 file = ""
-output = "path/to/export"
+output = "/Users/alterway/Desktop/cornac/"
 format = "html"
 analyzers = "all"
 [tokenizeur]
-ignore_dirs = ".hg"
+ignore_dirs = "tests,docs"
 ignore_prefixe = "."
-ignore_suffixe = ".gif,.jpg,.bak,.psd,.png,.htm,.xml,.js,.txt,.TXT,.old,.gz,.db,.jpeg,.JPG,.html,.swf,.scc,.rar,.zip,.ico,.sh,.patch,.sql,.dll,.gz,.ai,.afm"
-dependences = 1
-analyzers = "all"
-dependences = "1"
+ignore_suffixe = ".gif,.jpg,.bak,.psd,.png,.htm,.xml,.js,.txt,.old,.gz,.db,.jpeg,.JPG,.html,.swf,.scc,.rar,.zip,.ico"
+dependences = ""
+analyzers = "php_modules"
