--- a/dict/translations.en.ini
+++ b/dict/translations.en.ini
@@ -213,6 +213,11 @@ description = "Établit les liens entre deux fichiers, pour via une fonction : u
 title = "Fréquence des fonctions"
 ;original_description = "Liste des appels de fonctions"
 description = "Liste des appels de fonctions"
+[functions_lines]
+;original_title = "Lignes"
+title = "Lignes"
+;original_description = "Nombres de lignes par fonction"
+description = "Nombres de lignes par fonction"
 [functions_unused]
 ;original_title = "Fonctions non utilisées"
 title = "Fonctions non utilisées"
@@ -443,6 +448,11 @@ description = "Liste des références faites"
 title = "Regex"
 ;original_description = "Liste des expressions rationnelles identifiées dans le code."
 description = "Liste des expressions rationnelles identifiées dans le code."
+[return_with_dead_code]
+;original_title = "Return avec code mort"
+title = "Return avec code mort"
+;original_description = "Ceci est l'analyseur return_with_dead_code par défaut. "
+description = "Ceci est l'analyseur return_with_dead_code par défaut. "
 [returns]
 ;original_title = "Returns"
 title = "Returns"
