--- a/dict/translations.fr.ini
+++ b/dict/translations.fr.ini
@@ -68,6 +68,11 @@ description = "Arobases"
 title = "Blocs d'appels"
 ;original_description = "Identifie une liste d'appels successifs à la même fonction"
 description = "Identifie une liste d'appels successifs à la même fonction"
+[callback_functions]
+;original_title = "Fonction de rappel"
+title = "Fonction de rappel"
+;original_description = "Nom des fonctions de rappels utilisées. "
+description = "Nom des fonctions de rappels utilisées. "
 [classes]
 ;original_title = "Classes"
 title = "Classes"
@@ -223,6 +228,11 @@ description = "Nombres de lignes par fonction"
 title = "Fonctions non utilisées"
 ;original_description = "Liste des fonctions non utilisées"
 description = "Liste des fonctions non utilisées"
+[functions_with_callback]
+;original_title = "Fonctions avec callback"
+title = "Fonctions avec callback"
+;original_description = "Liste des fonctions PHP utilisant une fontion de callback"
+description = "Liste des fonctions PHP utilisant une fontion de callback"
 [functions_without_returns]
 ;original_title = "Fonctions sans return"
 title = "Fonctions sans return"
