translations for new analyzers

--- a/dict/translations.en.ini
+++ b/dict/translations.en.ini
@@ -203,6 +203,11 @@ description = "Liste des fonctions de fichier native utilisées dans l'applicati
 title = "Fonctions de filter"
 ;original_description = "Liste des fonctions de l'extension de filter de PHP"
 description = "Liste des fonctions de l'extension de filter de PHP"
+[fluid_interface]
+;original_title = "Titre pour fluid_interface"
+title = "Titre pour fluid_interface"
+;original_description = "Ceci est l'analyseur fluid_interface par défaut. "
+description = "Ceci est l'analyseur fluid_interface par défaut. "
 [foreach_unused]
 ;original_title = "Variables non utilisées d'un foreach"
 title = "Variables non utilisées d'un foreach"
