added new functions for ldap ext

--- a/dict/functions2ext.ini
+++ b/dict/functions2ext.ini
@@ -377,6 +377,22 @@ function[] = imagewbmp
 function[] = imagexbm
 function[] = jpeg2wbmp
 function[] = png2wbmp
+function[] = imagecreatefromxpm
+function[] = imageftbbox
+function[] = imagefttext
+function[] = imagegrabscreen
+function[] = imagegrabwindow
+function[] = imagepsbbox
+function[] = imagepsencodefont
+function[] = imagepsextendfont
+function[] = imagepsfreefont
+function[] = imagepsloadfont
+function[] = imagepsslantfont
+function[] = imagepstext
+function[] = imagettfbbox
+function[] = imagettftext
+function[] = iptcembed
+function[] = iptcparse
 
 [hash]
 function[] = hash
@@ -451,6 +467,8 @@ function[] = ldap_set_rebind_proc
 function[] = ldap_sort
 function[] = ldap_start_tls
 function[] = ldap_unbind
+function[] = ldap_8859_to_t61
+function[] = ldap_t61_to_8859
 
 [libxml]
 function[] = libxml_clear_errors
