added fbsql, for testing purpose

--- a/dict/functions2ext.ini
+++ b/dict/functions2ext.ini
@@ -1881,3 +1881,65 @@ function[] = pg_unescape_bytea;
 function[] = pg_untrace;
 function[] = pg_update;
 function[] = pg_version;
+
+[fbsql]
+function[] = fbsql_affected_rows
+function[] = fbsql_autocommit
+function[] = fbsql_blob_size
+function[] = fbsql_change_user
+function[] = fbsql_clob_size
+function[] = fbsql_close
+function[] = fbsql_commit
+function[] = fbsql_connect
+function[] = fbsql_create_blob
+function[] = fbsql_create_clob
+function[] = fbsql_create_db
+function[] = fbsql_data_seek
+function[] = fbsql_database_password
+function[] = fbsql_database
+function[] = fbsql_db_query
+function[] = fbsql_db_status
+function[] = fbsql_drop_db
+function[] = fbsql_errno
+function[] = fbsql_error
+function[] = fbsql_fetch_array
+function[] = fbsql_fetch_assoc
+function[] = fbsql_fetch_field
+function[] = fbsql_fetch_lengths
+function[] = fbsql_fetch_object
+function[] = fbsql_fetch_row
+function[] = fbsql_field_flags
+function[] = fbsql_field_len
+function[] = fbsql_field_name
+function[] = fbsql_field_seek
+function[] = fbsql_field_table
+function[] = fbsql_field_type
+function[] = fbsql_free_result
+function[] = fbsql_get_autostart_info
+function[] = fbsql_hostname
+function[] = fbsql_insert_id
+function[] = fbsql_list_dbs
+function[] = fbsql_list_fields
+function[] = fbsql_list_tables
+function[] = fbsql_next_result
+function[] = fbsql_num_fields
+function[] = fbsql_num_rows
+function[] = fbsql_password
+function[] = fbsql_pconnect
+function[] = fbsql_query
+function[] = fbsql_read_blob
+function[] = fbsql_read_clob
+function[] = fbsql_result
+function[] = fbsql_rollback
+function[] = fbsql_rows_fetched
+function[] = fbsql_select_db
+function[] = fbsql_set_characterset
+function[] = fbsql_set_lob_mode
+function[] = fbsql_set_password
+function[] = fbsql_set_transaction
+function[] = fbsql_start_db
+function[] = fbsql_stop_db
+function[] = fbsql_table_name
+function[] = fbsql_tablename
+function[] = fbsql_username
+function[] = fbsql_warnings
