added new sections for classes and constantes

--- a/dict/class2ext.ini
+++ b/dict/class2ext.ini
@@ -156,3 +156,10 @@ classes[] = ZipArchive
 [tidy]
 classes[] = TidyNode
 classes[] = Tidy
+[com]
+classes[] = com_exception
+classes[] = com_safearray_proxy
+classes[] = variant
+classes[] = com
+classes[] = dotnet
+classes[] = COMPersistHelper
