--- a/dict/constant2ext.ini
+++ b/dict/constant2ext.ini
@@ -1629,3 +1629,24 @@ constant[] = XDEBUG_TRACE_COMPUTERIZED
 constant[] = XDEBUG_TRACE_HTML
 constant[] = XDEBUG_CC_UNUSED
 constant[] = XDEBUG_CC_DEAD_CODE
+
+[fbsql]
+constant[] = FBSQL_ASSOC
+constant[] = FBSQL_BOTH
+constant[] = FBSQL_ISO_READ_COMMITTED
+constant[] = FBSQL_ISO_READ_UNCOMMITTED
+constant[] = FBSQL_ISO_REPEATABLE_READ
+constant[] = FBSQL_ISO_SERIALIZABLE
+constant[] = FBSQL_ISO_VERSIONED
+constant[] = FBSQL_LOB_DIRECT
+constant[] = FBSQL_LOB_HANDLE
+constant[] = FBSQL_LOCK_DEFERRED
+constant[] = FBSQL_LOCK_OPTIMISTIC
+constant[] = FBSQL_LOCK_PESSIMISTIC
+constant[] = FBSQL_NOEXEC
+constant[] = FBSQL_NUM
+constant[] = FBSQL_RUNNING
+constant[] = FBSQL_STARTING
+constant[] = FBSQL_STOPPED
+constant[] = FBSQL_STOPPING
+constant[] = FBSQL_UNKNOWN
