--- a/dict/translations.fr.ini
+++ b/dict/translations.fr.ini
@@ -273,6 +273,11 @@ description = "Liste des variables GPC qui se voient assigné une valeur (mauvai
 title = "Variables Web"
 ;original_description = "Liste les variables provenant du web, manipulées dans $_GET, $_FILES, $_POST, $_COOKIE"
 description = "Liste les variables provenant du web, manipulées dans $_GET, $_FILES, $_POST, $_COOKIE"
+[handlers]
+;original_title = "Gestionnaires"
+title = "Gestionnaires"
+;original_description = "Recherche les gestionnaires PHP reconfigurés."
+description = "Recherche les gestionnaires PHP reconfigurés."
 [headers]
 ;original_title = "Headers et setcookie"
 title = "Headers et setcookie"
@@ -423,11 +428,26 @@ description = "Utilisation des parenthèses"
 title = "Classes PHP"
 ;original_description = "Liste des classes PHP utilisées"
 description = "Liste des classes PHP utilisées"
+[php_classes_name_conflict]
+;original_title = "Conflits de noms avec des classe PHP"
+title = "Conflits de noms avec des classe PHP"
+;original_description = "Identifie des classes dont le nom est en conflit avec celles courantes de PHP"
+description = "Identifie des classes dont le nom est en conflit avec celles courantes de PHP"
+[php_constant_name_conflict]
+;original_title = "Conflits de noms avec des constantes PHP"
+title = "Conflits de noms avec des constantes PHP"
+;original_description = "Identifie des constantes dont le nom est en conflit avec celles courantes de PHP"
+description = "Identifie des constantes dont le nom est en conflit avec celles courantes de PHP"
 [php_functions]
 ;original_title = "Liste des fonctions PHP"
 title = "Liste des fonctions PHP"
 ;original_description = "Liste des différentes fonctions PHP utilisées dans l'application, avec leur fréquence"
 description = "Liste des différentes fonctions PHP utilisées dans l'application, avec leur fréquence"
+[php_functions_name_conflict]
+;original_title = "Conflits de noms avec des fonctions PHP"
+title = "Conflits de noms avec des fonctions PHP"
+;original_description = "Identifie des fonctions dont le nom est en conflit avec celles courantes de PHP"
+description = "Identifie des fonctions dont le nom est en conflit avec celles courantes de PHP"
 [php_modules]
 ;original_title = "Extensions PHP nécessaires"
 title = "Extensions PHP nécessaires"
@@ -551,8 +571,8 @@ description = "Liste des fonctions utilisées lors de l'upload d'un fichier"
 [vardump]
 ;original_title = "Var_dump et autre débug"
 title = "Var_dump et autre débug"
-;original_description = "Liste des var_dump, print_r, debug_backtrace, xdebug_*"
-description = "Liste des var_dump, print_r, debug_backtrace, xdebug_*"
+;original_description = "Liste des var_dump, print_r, debug_backtrace"
+description = "Liste des var_dump, print_r, debug_backtrace"
 [variables]
 ;original_title = "Variables"
 title = "Variables"
