--- a/ini/cornac.ini
+++ b/ini/cornac.ini
@@ -27,6 +27,6 @@ analyzers = "all"
 [tokenizeur]
 ignore_dirs = "tests,docs"
 ignore_prefixe = "."
-ignore_suffixe = ".gif,.jpg,.bak,.psd,.png,.htm,.xml,.js,.txt,.old,.gz,.db,.jpeg,.JPG,.html,.swf,.scc,.rar,.zip,.ico"
+ignore_suffixe = ".gif,.jpg,.bak,.psd,.png,.htm,.xml,.js,.txt,.old,.gz,.db,.jpeg,.JPG,.html,.swf,.scc,.rar,.zip,.ico,.docx"
 dependences = ""
 analyzers = "php_modules"
