added mssql functions

--- a/dict/functions2ext.ini
+++ b/dict/functions2ext.ini
@@ -1943,3 +1943,35 @@ function[] = fbsql_table_name
 function[] = fbsql_tablename
 function[] = fbsql_username
 function[] = fbsql_warnings
+
+[mssql]
+function[] = mssql_bind
+function[] = mssql_close
+function[] = mssql_connect
+function[] = mssql_data_seek
+function[] = mssql_execute
+function[] = mssql_fetch_array
+function[] = mssql_fetch_assoc
+function[] = mssql_fetch_batch
+function[] = mssql_fetch_field
+function[] = mssql_fetch_object
+function[] = mssql_fetch_row
+function[] = mssql_field_length
+function[] = mssql_field_name
+function[] = mssql_field_seek
+function[] = mssql_field_type
+function[] = mssql_free_result
+function[] = mssql_free_statement
+function[] = mssql_get_last_message
+function[] = mssql_guid_string
+function[] = mssql_init
+function[] = mssql_min_error_severity
+function[] = mssql_min_message_severity
+function[] = mssql_next_result
+function[] = mssql_num_fields
+function[] = mssql_num_rows
+function[] = mssql_pconnect
+function[] = mssql_query
+function[] = mssql_result
+function[] = mssql_rows_affected
+function[] = mssql_select_db
