--- a/dict/translations.en.ini
+++ b/dict/translations.en.ini
@@ -8,6 +8,11 @@ description = "Liste des utilisations de l'opérateur"
 title = "Utilisation indue de $this"
 ;original_description = "Recherche les utilisations de $this hors d'une classe."
 description = "Recherche les utilisations de $this hors d'une classe."
+[abstracts]
+;original_title = "abstracts"
+title = "abstracts"
+;original_description = "Classe ou méthodes abstraites"
+description = "Classe ou méthodes abstraites"
 [addElement]
 ;original_title = "addElement utilisés"
 title = "addElement utilisés"
@@ -203,9 +208,14 @@ description = "Liste des fonctions de fichier native utilisées dans l'applicati
 title = "Fonctions de filter"
 ;original_description = "Liste des fonctions de l'extension de filter de PHP"
 description = "Liste des fonctions de l'extension de filter de PHP"
+[finals]
+;original_title = "Titre pour finals"
+title = "Titre pour finals"
+;original_description = "Ceci est l'analyseur finals par défaut. "
+description = "Ceci est l'analyseur finals par défaut. "
 [fluid_interface]
-;original_title = "Titre pour fluid_interface"
-title = "Titre pour fluid_interface"
+;original_title = "Interfaces fluides"
+title = "Interfaces fluides"
 ;original_description = "Ceci est l'analyseur fluid_interface par défaut. "
 description = "Ceci est l'analyseur fluid_interface par défaut. "
 [foreach_unused]
@@ -213,6 +223,11 @@ description = "Ceci est l'analyseur fluid_interface par défaut. "
 title = "Variables non utilisées d'un foreach"
 ;original_description = "Repère les variables d'un foreach qui ne sont pas utilisées. foreach($a as $k => $v) {     }"
 description = "Repère les variables d'un foreach qui ne sont pas utilisées. foreach($a as $k => $v) {     }"
+[function_args_reference]
+;original_title = "Fonctions avec références"
+title = "Fonctions avec références"
+;original_description = "Fonctions et méthodes avec références"
+description = "Fonctions et méthodes avec références"
 [function_link]
 ;original_title = "Lien entre les fichiers via les fonctions"
 title = "Lien entre les fichiers via les fonctions"
@@ -416,8 +431,8 @@ description = "Liste des boucles"
 [nonphp_functions]
 ;original_title = "Fonctions"
 title = "Fonctions"
-;original_description = "Liste des fonctions de dossier"
-description = "Liste des fonctions de dossier"
+;original_description = "Liste des fonctions utilisateurs"
+description = "Liste des fonctions utilisateurs"
 [parentheses]
 ;original_title = "Parentheses"
 title = "Parentheses"
@@ -448,6 +463,11 @@ description = "Liste des différentes fonctions PHP utilisées dans l'applicatio
 title = "Conflits de noms avec des fonctions PHP"
 ;original_description = "Identifie des fonctions dont le nom est en conflit avec celles courantes de PHP"
 description = "Identifie des fonctions dont le nom est en conflit avec celles courantes de PHP"
+[php_keywords]
+;original_title = "Mots clés PHP"
+title = "Mots clés PHP"
+;original_description = "Ceci est l'analyseur php_keywords par défaut. "
+description = "Ceci est l'analyseur php_keywords par défaut. "
 [php_modules]
 ;original_title = "Extensions PHP nécessaires"
 title = "Extensions PHP nécessaires"
@@ -628,6 +648,11 @@ description = "Repère les classes issues du Zend Framework"
 title = "Controleurs ZF"
 ;original_description = "Liste des fonctions méthodes de contrôleur pour le ZF (*Action)"
 description = "Liste des fonctions méthodes de contrôleur pour le ZF (*Action)"
+[zfDependencies]
+;original_title = "Dépendances au Zend Framework"
+title = "Dépendances au Zend Framework"
+;original_description = "Liste des classes du ZF dont l'application dépend : par héritage ou par utilisation directe"
+description = "Liste des classes du ZF dont l'application dépend : par héritage ou par utilisation directe"
 [zfElements]
 ;original_title = "Element ZF non validés"
 title = "Element ZF non validés"
