update description, added writeexcel class

--- a/dict/poplib.ini
+++ b/dict/poplib.ini
@@ -91,3 +91,11 @@ classes[] = y_axis_label;
 classes[] = y_axis_labels;
 classes[] = y_axis_right;
 classes[] = y_legend;
+[writeexcel]
+classes[] = writeexcel_biffwriter
+classes[] = writeexcel_format
+classes[] = writeexcel_formula
+classes[] = writeexcel_olewriter
+classes[] = writeexcel_workbook
+classes[] = writeexcel_workbookbig
+classes[] = writeexcel_worksheet
