--- a/dict/translations.fr.ini
+++ b/dict/translations.fr.ini
@@ -188,16 +188,11 @@ description = "Liste des fonctions de l'extension errorfunc de PHP"
 title = "Eval"
 ;original_description = "Liste des utilisations de eval"
 description = "Liste des utilisations de eval"
-[exec_functions]
-;original_title = "Fonctions de ligne de commande"
-title = "Fonctions de ligne de commande"
-;original_description = "Liste des fonctions de l'extension de exec de PHP"
-description = "Liste des fonctions de l'extension de exec de PHP"
 [execs]
-;original_title = "Fonctions execution"
-title = "Fonctions execution"
-;original_description = "Liste des fonctions d'execution de commandes en ligne"
-description = "Liste des fonctions d'execution de commandes en ligne"
+;original_title = "Shell exec functions"
+title = "Shell exec functions"
+;original_description = "Shell execution functions"
+description = "Shell execution functions"
 [file_functions]
 ;original_title = "Fonctions de fichier"
 title = "Fonctions de fichier"
@@ -233,16 +228,21 @@ description = "Fonctions et méthodes avec références"
 title = "Lien entre les fichiers via les fonctions"
 ;original_description = "Établit les liens entre deux fichiers, pour via une fonction : un lien est établit entre le fichier de défintion de la fonction, et son utilisation"
 description = "Établit les liens entre deux fichiers, pour via une fonction : un lien est établit entre le fichier de défintion de la fonction, et son utilisation"
+[function_return_unused]
+;original_title = "Unused return values"
+title = "Unused return values"
+;original_description = "Spot function whose return values are not used. Function is called, but result is just ignored."
+description = "Spot function whose return values are not used. Function is called, but result is just ignored."
 [functions_frequency]
 ;original_title = "Fréquence des fonctions"
 title = "Fréquence des fonctions"
 ;original_description = "Liste des appels de fonctions"
 description = "Liste des appels de fonctions"
 [functions_lines]
-;original_title = "Lignes"
-title = "Lignes"
-;original_description = "Nombres de lignes par fonction"
-description = "Nombres de lignes par fonction"
+;original_title = "Lines of code"
+title = "Lines of code"
+;original_description = "Line of code count, function by function"
+description = "Line of code count, function by function"
 [functions_unused]
 ;original_title = "Fonctions non utilisées"
 title = "Fonctions non utilisées"
@@ -363,6 +363,11 @@ description = "Liste des fonctions LDAP"
 title = "Litéraux"
 ;original_description = "Liste des literaux et de leur usage (chaînes (guillemets, heredoc), nombres)"
 description = "Liste des literaux et de leur usage (chaînes (guillemets, heredoc), nombres)"
+[literals_as_argref]
+;original_title = "Litéraux passés comme arguments"
+title = "Litéraux passés comme arguments"
+;original_description = "Literal values passed as argument of function, when the former expect"
+description = "Literal values passed as argument of function, when the former expect"
 [literals_long]
 ;original_title = "Literaux longs"
 title = "Literaux longs"
@@ -373,11 +378,26 @@ description = "Literaux qui sont trop longs (> 1ko)"
 title = "Literaux utilisés plusieurs fois"
 ;original_description = "Literaux qui sont réutiisés à plusieurs endroits du code"
 description = "Literaux qui sont réutiisés à plusieurs endroits du code"
+[long_loops]
+;original_title = "Long loops"
+title = "Long loops"
+;original_description = "Spot loops that have too many lines (more than 10)."
+description = "Spot loops that have too many lines (more than 10)."
+[loops_oneliner]
+;original_title = "One line loops"
+title = "One line loops"
+;original_description = "Identify short loops."
+description = "Identify short loops."
 [method_special]
 ;original_title = "Méthodes spéciales"
 title = "Méthodes spéciales"
 ;original_description = "Liste des méthodes spéciales de PHP"
 description = "Liste des méthodes spéciales de PHP"
+[method_without_ppp]
+;original_title = "Methods without PPP"
+title = "Methods without PPP"
+;original_description = "Spot methods that do not bear any of the ppp visibility attribute : they shoud be mentions explicitly. "
+description = "Spot methods that do not bear any of the ppp visibility attribute : they shoud be mentions explicitly. "
 [methodscall]
 ;original_title = "Méthodes appelées"
 title = "Méthodes appelées"
@@ -438,6 +458,11 @@ description = "Liste des fonctions utilisateurs"
 title = "Parentheses"
 ;original_description = "Utilisation des parenthèses"
 description = "Utilisation des parenthèses"
+[pearClasses]
+;original_title = "Pear usage"
+title = "Pear usage"
+;original_description = "Spot usage of classes from PEAR."
+description = "Spot usage of classes from PEAR."
 [php_classes]
 ;original_title = "Classes PHP"
 title = "Classes PHP"
@@ -563,6 +588,11 @@ description = "Liste des tableaux spéciaux de PHP"
 title = "Exceptions thrown"
 ;original_description = "Liste des emissions d'exceptions"
 description = "Liste des emissions d'exceptions"
+[tostring_no_arg]
+;original_title = "tostring without arguments"
+title = "tostring without arguments"
+;original_description = "Spot __toString methods with arguments (Incompatible change for PHP 5.3)"
+description = "Spot __toString methods with arguments (Incompatible change for PHP 5.3)"
 [undeffunctions]
 ;original_title = "Fonctions non définies"
 title = "Fonctions non définies"
