--- a/ini/test.ini
+++ b/ini/test.ini
@@ -1,6 +1,8 @@
 [template.mysql]
-host=127.0.0.1
-user=root
-mdp=
-dbname=analyseur
-table=tests
+host = "127.0.0.1"
+user = "root"
+mdp = ""
+dbname = "analyseur"
+table = "tests"
+[tokenizeur]
+ignore_suffixe = ".gif,.jpg,.bak,.psd,.png,.htm,.xml,.js,.txt,.old,.gz,.db,.jpeg,.html,.swf,.scc,.rar,.zip,.ico,.sh,.patch,.sql,.dll,.ai,.afm,.jar,.docx,.dat,.mp3,.ttf,.table,.pdf,.z,.fla,.bmp,.cgi,.csv,.xsl,svg,.doc,.docx,.odt,.odp,.wsdl,.xsd,.dist,.markdown,.awk"
