new extensions to ignore

--- a/ini/cornac.ini
+++ b/ini/cornac.ini
@@ -27,6 +27,6 @@ analyzers = "all"
 [tokenizeur]
 ignore_dirs = "tests,docs"
 ignore_prefixe = "."
-ignore_suffixe = ".gif,.jpg,.bak,.psd,.png,.htm,.xml,.js,.txt,.old,.gz,.db,.jpeg,.html,.swf,.scc,.rar,.zip,.ico,.sh,.patch,.sql,.dll,.ai,.afm,.jar,.docx,.dat,.mp3,.ttf,.table,.pdf,.z,.fla,.bmp,.cgi,.csv,.xsl,svg,.doc,.docx,.odt,.odp,.wsdl,.xsd,.dist,.markdown,.awk,.war,.md,.ott,.odg,.ts,.xmi,.dba,.ezt,.o,.cpp,.java,.manifest"
+ignore_suffixe = ".afm,.ai,.awk,.bak,.bmp,.cgi,.cpp,.csv,.dat,.db,.dba,.dist,.dll,.doc,.docx,.ezt,.fla,.gif,.gz,.htm,.html,.ico,.jar,.java,.jpeg,.jpg,.js,.manifest,.markdown,.md,.mp3,.o,.odg,.odp,.odt,.old,.ott,.patch,.pdf,.png,.psd,.rar,.rng,.scc,.sh,.sql,.swf,.table,.ts,.ttf,.txt,.war,.wsdl,.xmi,.xml,.xsd,.xsl,.z,.zip,svg"
 dependences = ""
 analyzers = "php_modules"
