--- a/ini/cornac.ini
+++ b/ini/cornac.ini
@@ -27,6 +27,6 @@ analyzers = "all"
 [tokenizeur]
 ignore_dirs = "tests,docs"
 ignore_prefixe = "."
-ignore_suffixe = ".afm,.ai,.awk,.bak,.bmp,.cgi,.cpp,.csv,.dat,.db,.dba,.dist,.dll,.doc,.docx,.ezt,.fla,.gif,.gz,.htm,.html,.ico,.jar,.java,.jpeg,.jpg,.js,.manifest,.markdown,.md,.mp3,.o,.odg,.odp,.odt,.old,.ott,.patch,.pdf,.png,.psd,.rar,.rng,.scc,.sh,.sql,.swf,.table,.ts,.ttf,.txt,.war,.wsdl,.xmi,.xml,.xsd,.xsl,.z,.zip,svg"
+ignore_suffixe = ".afm,.ai,.awk,.bak,.bmp,.cgi,.cpp,.csv,.ctp,.dat,.db,.dba,.dia,.dist,.dll,.doc,.docx,.dtd,.ezt,.fla,.gif,.gz,.htm,.html,.ico,.in,.jar,.java,.jpeg,.jpg,.js,.jsb,.manifest,.markdown,.md,.md5,.mp3,.mxml,.o,.odg,.odp,.odt,.old,.ott,.patch,.pdf,.png,.psd,.rar,.rng,.sample,.scc,.sgml,.sh,.sql,.swf,.table,.ts,.ttf,.txt,.war,.wsdl,.xmi,.xml,.xsd,.xsl,.z,.zip,svg"
 dependences = ""
 analyzers = "php_modules"
