added .lin and .fre, for phpshield

--- a/ini/test.ini
+++ b/ini/test.ini
@@ -5,4 +5,4 @@ mdp = ""
 dbname = "analyseur"
 table = "tests"
 [tokenizeur]
-ignore_suffixe = ".afm,.ai,.awk,.bak,.bmp,.cgi,.cpp,.csv,.ctp,.dat,.db,.dba,.dia,.dist,.dll,.doc,.docx,.dtd,.ezt,.fla,.gif,.gz,.htm,.html,.ico,.in,.jar,.java,.jpeg,.jpg,.js,.jsb,.manifest,.markdown,.md,.md5,.mp3,.mxml,.o,.odg,.odp,.odt,.old,.ott,.patch,.pdf,.png,.psd,.rar,.rng,.sample,.scc,.sgml,.sh,.sql,.swf,.table,.ts,.ttf,.txt,.war,.wsdl,.xmi,.xml,.xsd,.xsl,.z,.zip,svg"
+ignore_suffixe = ".afm,.ai,.awk,.bak,.bmp,.cgi,.cpp,.csv,.ctp,.dat,.db,.dba,.dia,.dist,.dll,.doc,.docx,.dtd,.ezt,.fla,.fre,.gif,.gz,.htm,.html,.ico,.in,.jar,.java,.jpeg,.jpg,.js,.jsb,.lin,.manifest,.markdown,.md,.md5,.mp3,.mxml,.o,.odg,.odp,.odt,.old,.ott,.patch,.pdf,.png,.psd,.rar,.rng,.sample,.scc,.sgml,.sh,.sql,.swf,.table,.ts,.ttf,.txt,.war,.wsdl,.xmi,.xml,.xsd,.xsl,.z,.zip,svg"
