handle compile failure

--- a/scripts/tags/tags.ini
+++ b/scripts/tags/tags.ini
@@ -15,6 +15,11 @@ ignore_ext[] = js
 ignore_ext[] = ini
 ignore_ext[] = sh
 ignore_ext[] = log
+ignore_ext[] = gif
+ignore_ext[] = png
+ignore_ext[] = jpg
+ignore_ext[] = jpeg
+ignore_ext[] = zip
 ignore_ext[] = ''
 
 smell_words[] = hack
@@ -22,6 +27,15 @@ smell_words[] = shit
 smell_words[] = merde
 smell_words[] = bad
 smell_words[] = wtf
+smell_words[] = connard
+smell_words[] = con
+smell_words[] = imbecile
+smell_words[] = print_r
+smell_words[] = var_dump
+smell_words[] = exit
+smell_words[] = die
+smell_words[] = pouet
+smell_words[] = coucou
 
 ;ignore_files[] = 
 max_files = 50
