--- a/ini/test.ini
+++ b/ini/test.ini
@@ -5,4 +5,4 @@ mdp = ""
 dbname = "analyseur"
 table = "tests"
 [tokenizeur]
-ignore_suffixe = ".JPG,.afm,.ai,.awk,.bak,.bmp,.cgi,.cpp,.csv,.ctp,.dat,.db,.dba,.dia,.dist,.dll,.doc,.docx,.dtd,.ezt,.fla,.flv,.fre,.gif,.gz,.htm,.html,.ico,.in,.info,.jar,.java,.jpeg,.jpg,.js,.jsb,.lin,.manifest,.markdown,.md,.md5,.mp3,.mpg,.mxml,.o,.odg,.odp,.odt,.old,.ott,.patch,.pdf,.png,.psd,.rar,.resx,.rng,.sample,.scc,.sgml,.sh,.sql,.swf,.table,.tar,.ts,.ttf,.txt,.war,.wsdl,.xmi,.xml,.xsd,.xsl,.xslt,.z,.zip,svg"
+ignore_suffixe = ".JPG,.afm,.ai,.awk,.bak,.bmp,.cgi,.cpp,.csv,.ctp,.dat,.db,.dba,.dia,.dist,.dll,.doc,.docx,.dtd,.ezt,.fla,.flv,.fre,.gif,.gz,.htm,.html,.ico,.in,.info,.jar,.java,.jpeg,.jpg,.js,.jsb,.lin,.manifest,.markdown,.md,.md5,.mp3,.mpg,.mxml,.o,.odg,.odp,.odt,.old,.ott,.patch,.pdf,.png,.psd,.rar,.resx,.rng,.sample,.scc,.sgml,.sh,.sql,.swf,.table,.tar,.tiff,.ts,.ttf,.txt,.war,.wsdl,.xmi,.xml,.xsd,.xsl,.xslt,.z,.zip,svg"
