--- a/ini/test.ini
+++ b/ini/test.ini
@@ -5,4 +5,4 @@ mdp = ""
 dbname = "analyseur"
 table = "tests"
 [tokenizeur]
-ignore_suffixe = ".JPG,.afm,.ai,.awk,.bak,.bat,.bmp,.c,.cgi,.config,.cpp,.css,.csv,.ctp,.darwin,.dat,.db,.dba,.default,.dia,.dist,.dll,.doc,.docx,.dtd,.exe,.ezt,.fla,.flv,.fre,.gif,.gz,.h,.htm,.html,.ico,.in,.info,.jar,.java,.jpeg,.jpg,.js,.jsb,.lin,.manifest,.markdown,.md,.md5,.mp3,.mpg,.mxml,.o,.odg,.odp,.odt,.old,.ott,.patch,.pdf,.pfb,.pl,.png,.psd,.py,.rar,.rdf,.resx,.rng,.rss,.sample,.scc,.sgml,.sh,.sql,.swf,.table,.tar,.tiff,.ts,.ttf,.txt,.war,.wsdl,.xap,.xmi,.xml,.xsd,.xsl,.xslt,.xul,.yml,.z,.zip,svg"
+ignore_suffixe = ".DLL,.JPG,.afm,.ai,.awk,.bak,.bat,.bdsgroup,.bdsproj,.bmp,.bpr,.c,.cgi,.config,.cpp,.css,.csv,.ctp,.darwin,.dat,.db,.dba,.default,.dia,.dist,.dll,.doc,.docx,.dtd,.exe,.ezt,.fla,.flv,.fre,.gif,.gz,.h,.hlp,.htm,.html,.ico,.in,.info,.jar,.java,.jpeg,.jpg,.js,.jsb,.lin,.manifest,.markdown,.md,.md5,.mp3,.mpg,.mxml,.o,.odg,.odp,.odt,.old,.ott,.pas,.patch,.pdf,.pfb,.pl,.png,.psd,.py,.rar,.rdf,.resx,.rng,.rss,.sample,.scc,.sgml,.sh,.sql,.src,.swf,.table,.tar,.tiff,.ts,.ttf,.txt,.war,.wsdl,.xap,.xmi,.xml,.xsd,.xsl,.xslt,.xul,.yml,.z,.zip,svg"
