--- a/ini/cornac.ini
+++ b/ini/cornac.ini
@@ -27,6 +27,6 @@ analyzers = "all"
 [tokenizeur]
 ignore_dirs = "tests,docs"
 ignore_prefixe = "."
-ignore_suffixe = ".CAB,.DLL,.JPG,.afm,.ai,.awk,.bak,.bat,.bdsgroup,.bdsproj,.bmp,.bpr,.c,.cgi,.config,.cpp,.css,.csv,.ctp,.darwin,.dat,.db,.dba,.default,.dia,.dist,.dll,.doc,.docx,.dtd,.eot,.exe,.ezt,.fla,.flv,.fre,.gif,.gz,.h,.hlp,.htm,.html,.icc,.ico,.in,.info,.jar,.java,.jpeg,.jpg,.js,.jsb,.lin,.manifest,.markdown,.md,.md5,.mp3,.mpg,.mxml,.o,.odg,.odp,.odt,.old,.ott,.pas,.patch,.pdf,.pfb,.pl,.png,.ppt,.psd,.py,.rar,.rdf,.resx,.rng,.rss,.sample,.scc,.sgml,.sh,.sql,.src,.swf,.table,.tar,.tiff,.ts,.ttf,.txt,.war,.woff,.wsdl,.xad,.xap,.xcf,.xls,.xmi,.xml,.xsd,.xsl,.xslt,.xul,.yml,.z,.zip,svg"
+ignore_suffixe = ".CAB,.DLL,.JPG,.afm,.ai,.awk,.bak,.bat,.bdsgroup,.bdsproj,.bmp,.bpr,.c,.cgi,.config,.cpp,.css,.csv,.ctp,.darwin,.dat,.db,.dba,.default,.dia,.dist,.dll,.doc,.docx,.dtd,.eot,.exe,.ezt,.fla,.flv,.fre,.gif,.gz,.h,.hlp,.htm,.html,.icc,.ico,.in,.info,.jar,.java,.jpeg,.jpg,.js,.jsb,.lin,.manifest,.markdown,.md,.md5,.mp3,.mpg,.mxml,.o,.odg,.odp,.odt,.old,.ott,.pas,.patch,.pdf,.pfb,.pl,.png,.ppt,.psd,.py,.rar,.rdf,.resx,.rng,.rss,.sample,.scc,.sgml,.sh,.so,.sql,.src,.swf,.table,.tar,.tiff,.ts,.ttf,.txt,.war,.woff,.wsdl,.xad,.xap,.xcf,.xls,.xmi,.xml,.xsd,.xsl,.xslt,.xul,.yml,.z,.zip,svg"
 dependences = ""
 analyzers = "php_modules"
