new extension, plus check in database

--- a/ini/test.ini
+++ b/ini/test.ini
@@ -1,8 +1,31 @@
+[cornac]
+ini = "test"
+prefix = "test"
+origin = "./References/test-3.20"
+destination = "/Users/alterway/Desktop/test/"
+storage = "mysql"
+[mysql]
+dsn = "mysql:dbname=analyseur;host=127.0.0.1"
+username = "root"
+password = ""
+active = 1
+[sqlite]
+dsn = "sqlite:/tmp/test.sq3"
+active = 0
 [template.mysql]
-host = "127.0.0.1"
-user = "root"
-mdp = ""
 dbname = "analyseur"
-table = "tests"
+[template.sqlite]
+dependences = 1
+analyzers = "all"
+[reader]
+dependences = ""
+module = ""
+file = ""
+output = "/Users/alterway/Desktop/test/"
+format = "html"
+analyzers = "all"
 [tokenizeur]
-ignore_suffixe = ".CAB,.DLL,.JPG,.afm,.ai,.as3proj,.awk,.bak,.bat,.bdsgroup,.bdsproj,.bin,.bmp,.bpk,.bpr,.c,.cgi,.config,.cpp,.css,.csv,.ctp,.darwin,.dat,.db,.dba,.default,.desc,.dia,.dist,.dll,.doc,.docx,.dtd,.eot,.exe,.ezt,.fla,.flv,.fre,.gif,.gz,.h,.hlp,.htm,.html,.icc,.ico,.in,.info,.jar,.java,.jpeg,.jpg,.js,.jsb,.lin,.linux,.lss,.manifest,.markdown,.md,.md5,.mo,.mp3,.mpg,.mwb,.mxml,.o,.odg,.odp,.odt,.old,.ott,.pas,.patch,.pcx,.pdf,.pfb,.pl,.png,.po,.ppt,.psd,.py,.rar,.rdf,.resx,.rng,.rss,.sample,.scc,.selenium,.sgml,.sh,.sit,.sitx,.so,.sql,.src,.swf,.sxd,.sxw,.table,.tar,.tex,.tga,.tif,.tiff,.ts,.ttf,.txt,.vsd,.war,.woff,.wsdl,.xad,.xap,.xcf,.xls,.xmi,.xml,.xsd,.xsl,.xslt,.xul,.yml,.z,.zip,svg"
+ignore_dirs = "templates"
+ignore_prefixe = "."
+ignore_suffixe = ".CAB,.DLL,.JPG,.afm,.ai,.as3proj,.awk,.bak,.bat,.bdsgroup,.bdsproj,.bin,.bmp,.bpk,.bpr,.c,.cgi,.conf,.config,.cpp,.css,.csv,.ctp,.darwin,.dat,.db,.dba,.default,.desc,.dia,.dist,.dll,.doc,.docx,.dtd,.eot,.exe,.ezt,.fla,.flv,.fre,.gif,.gz,.h,.hlp,.htm,.html,.icc,.ico,.in,.info,.jar,.java,.jpeg,.jpg,.js,.jsb,.lin,.linux,.lss,.manifest,.markdown,.md,.md5,.mo,.mp3,.mpg,.mso,.mwb,.mxml,.o,.odg,.odp,.odt,.old,.ott,.pas,.patch,.pcx,.pdf,.pfb,.pl,.png,.po,.ppt,.psd,.py,.rar,.rdf,.resx,.rng,.rss,.sample,.scc,.selenium,.sgml,.sh,.sit,.sitx,.so,.sql,.src,.svg,.swf,.sxd,.sxw,.table,.tar,.tex,.tga,.tif,.tiff,.ts,.ttf,.txt,.vsd,.war,.woff,.wsdl,.xad,.xap,.xcf,.xls,.xmi,.xml,.xsd,.xsl,.xslt,.xul,.yml,.z,.zip"
+dependences = ""
