new smelly words

--- a/scripts/tags/tags.ini
+++ b/scripts/tags/tags.ini
@@ -36,6 +36,8 @@ smell_words[] = exit
 smell_words[] = die
 smell_words[] = pouet
 smell_words[] = coucou
+smell_words[] = toto
+smell_words[] = Hello
 
 ;ignore_files[] = 
 max_files = 50
